Controllers, FluentValidation and Filter added

--- a/NLayer.Web/appsettings.json
+++ b/NLayer.Web/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlConnection": "Data Source=DESKTOP-P1KHAKN\\SQLEXPRESS;Initial Catalog=NLayerAPIDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
