--- a/NLayer.Web/appsettings.json
+++ b/NLayer.Web/appsettings.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "SqlConnection": "Data Source=DESKTOP-P1KHAKN\\SQLEXPRESS;Initial Catalog=NLayerAPIDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
+  "BaseUrl": "https://localhost:7063/api/",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
